elastix/drbd/iptables/iptables
# Generated by iptables-save v1.3.5 on Thu Mar 13 15:26:07 2014
*nat
:PREROUTING ACCEPT [896:125050]
:POSTROUTING ACCEPT [33:7013]
:OUTPUT ACCEPT [33:7013]
COMMIT
# Completed on Thu Mar 13 15:26:07 2014
# Generated by iptables-save v1.3.5 on Thu Mar 13 15:26:07 2014
*filter
:INPUT ACCEPT [30:2570]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2066:2238321]
:ELASTIX_FORWARD - [0:0]
:ELASTIX_INPUT - [0:0]
:ELASTIX_OUTPUT - [0:0]
-A INPUT -j ELASTIX_INPUT 
-A FORWARD -j ELASTIX_FORWARD 
-A OUTPUT -j ELASTIX_OUTPUT 
-A ELASTIX_FORWARD -j REJECT --reject-with icmp-port-unreachable 
-A ELASTIX_INPUT -i lo -j ACCEPT 
-A ELASTIX_INPUT -i bond0 -j ACCEPT 
-A ELASTIX_INPUT -p icmp -j ACCEPT 
-A ELASTIX_INPUT -i eth0 -p udp -m udp --dport 5004:5082 -j ACCEPT 
-A ELASTIX_INPUT -i eth0 -p udp -m udp --dport 4569 -j ACCEPT 
-A ELASTIX_INPUT -i eth0 -p udp -m udp --dport 10000:20000 -j ACCEPT 
-A ELASTIX_INPUT -i eth0 -p udp -m udp --sport 53 -j ACCEPT 
-A ELASTIX_INPUT -i eth0 -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT 
-A ELASTIX_INPUT -i eth0 -p udp -m udp --dport 69 -j ACCEPT 
-A ELASTIX_INPUT -i eth0 -p udp -m udp --dport 123 -j ACCEPT 
-A ELASTIX_INPUT -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT 
-A ELASTIX_INPUT -i eth1 -p tcp -m tcp --dport 80 -j ACCEPT 
-A ELASTIX_INPUT -i eth1 -p tcp -m tcp --dport 443 -j ACCEPT
 A ELASTIX_INPUT -i eth1 -p tcp -m tcp --dport 8123 -j ACCEPT
-A ELASTIX_INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A ELASTIX_INPUT -j REJECT --reject-with icmp-port-unreachable 
COMMIT
# Completed on Thu Mar 13 15:26:07 2014
